<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="nanodegree_app_1">Popular Movies</string>
    <string name="nanodegree_app_2">Stock Hawk</string>
    <string name="nanodegree_app_3">Build it Bigger</string>
    <string name="nanodegree_app_4">Make Your App Material</string>
    <string name="nanodegree_app_5">Go Ubiquitous</string>
    <string name="nanodegree_app_6">Capstone</string>
</resources>
