<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rtl.com.myappportfolio.MainActivity">

    <TextView
        android:layout_width="@dimen/activity_main_width"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="20sp" />

    <Button
        android:layout_width="@dimen/activity_main_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:background="#2E3D49"
        android:onClick="clickApp1"
        android:text="@string/nanodegree_app_1"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="@dimen/activity_main_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:background="#2E3D49"
        android:onClick="clickApp2"
        android:text="@string/nanodegree_app_2"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="@dimen/activity_main_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:background="#2E3D49"
        android:onClick="clickApp3"
        android:text="@string/nanodegree_app_3"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="@dimen/activity_main_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:background="#2E3D49"
        android:onClick="clickApp4"
        android:text="@string/nanodegree_app_4"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="@dimen/activity_main_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:background="#2E3D49"
        android:onClick="clickApp5"
        android:text="@string/nanodegree_app_5"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="@dimen/activity_main_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:background="#2E3D49"
        android:onClick="clickApp6"
        android:text="@string/nanodegree_app_6"
        android:textColor="@android:color/white" />
</LinearLayout>
